# CS122A-Final-Project

./: .gitignore  CMakeLists.txt  README.md
FPGA/src/: display.sv  spi.sv  top.sv
PICO/: CMakeLists.txt  CS122A-Lab04-WTH.c  lv_conf.h
PICO/include/: lvgl_clock.h  lvgl_compass.h  lvgl_pie_chart.h
PICO/src/: fork_cs153.c  lvgl_arc_label.cpp  lvgl_clock.cpp  lvgl_compass.cpp  lvgl_heart_rate.cpp  lvgl_pie_chart.cpp  main.cpp
Verilog/src/: top.v
hw/: CMakeLists.txt  top.lpf
include/: menu_manager.h
sensor/: CMakeLists.txt  checkpoint.c
src/: main.cpp  menu_manager.cpp
sw/: CMakeLists.txt
sw/include/: cs122_app.h  lv_conf.h  lvgl_arc_label.h  lvgl_demo_widgets.h  lvgl_heart_rate.h  lvgl_touch.h
sw/src/: cs122_app.cpp  lvgl_demo_widgets.cpp  lvgl_touch.cpp  main.cpp
